--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase-admin": "^11.6.0",
     "google-auth-library": "^8.7.0",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "module-alias": "^2.2.2",
     "mongo-sanitize": "^1.1.0",
     "mongoose": "^7.0.0",
+    "multer": "^1.4.5-lts.1",
     "redis": "^4.6.5",
     "socket.io": "^4.6.1"
   },
