--- a/jsconfig.json
+++ b/jsconfig.json
@@ -35,6 +35,9 @@
       "@utils/*": [
         "./src/utils/*"
       ],
+      "@events/*": [
+        "./src/events/*"
+      ],
       "@src/*": [
         "./src/*"
       ]
