Update env file

--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
     },
     "author": "Minh Trung",
     "_moduleAliases": {
-        "@src": "./src/",
-        "@constants": "./src/constants",
-        "@configs": "./src/configs",
-        "@handler": "./src/handler",
-        "@controllers": "./src/controllers",
-        "@middleware": "./src/middleware",
-        "@databases": "./src/databases",
-        "@models": "./src/models",
-        "@routers": "./src/routers",
-        "@services": "./src/services",
-        "@helpers": "./src/helpers",
-        "@utils": "./src/utils",
-        "@events": "./src/events"
+        "@src": "src/",
+        "@constants": "src/constants",
+        "@configs": "src/configs",
+        "@handler": "src/handler",
+        "@controllers": "src/controllers",
+        "@middleware": "src/middleware",
+        "@databases": "src/databases",
+        "@models": "src/models",
+        "@routers": "src/routers",
+        "@services": "src/services",
+        "@helpers": "src/helpers",
+        "@utils": "src/utils",
+        "@events": "src/events"
     },
     "license": "ISC",
     "dependencies": {
