--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Backend of Hello Japan application",
     "main": "server.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node server"
     },
     "author": "Minh Trung",
     "_moduleAliases": {
